add count to artist songs
